[package]
name = "lfu"
version = "0.2.0"
authors = ["NavyaZaveri"]
edition = "2018"
description="An LFU cache implementation"
readme = "README.md"
repository = "https://github.com/NavyaZaveri/lfu-cache"
keywords = ["cache", "algorithms", "lfu"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/lfu"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_hash_set = "0.1.3"

